ipc/ipdl/test/ipdl/ok/manageSelf_Toplevel.ipdl
include protocol manageSelf;

protocol manageSelf_Toplevel {
    manages manageSelf;

child:
    async manageSelf();
    async __delete__();
};
