ipc/ipdl/test/ipdl/error/bridgesSubprotocol.ipdl
include protocol subprotocolBridges;

protocol bridgesSubprotocol {
    bridges subprotocolBridges, subprotocolBridges;

    manages subprotocolBridges;

child:
    subprotocolBridges();
    async __delete__();

state DEAD: send __delete__;
};
